2003-06-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Reimplement array
	variables to support arrays with complex
	subexpressions. The previous implementation
	did not work with arrays like $arr["one"."two"],
	it only matched known index values like literals,
	strings, variables, and so on. Split the rules
	so that plain variables are handled separately
	from array variables. Support nested array
	variables with a stack based approach. Add a
	pop_head_token helper so that the token can
	be pulled off the queue without being freed.
	* tests/parsers/php.test: Add a series of
	highlight tests to check for nested arrays
	and arrays with complex subexpressions as
	the index value. Invert the xref order for
	tests that change as a result of the new
	way that arrays are processed. Remove knownbug
	constraint from tests that now pass.

2003-06-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (db_insert_entry, db_key_in_table):
	If the special GLOBAL ref from scope is used
	and a global variable xref is getting inserted
	for the first time, then emit a symbol that
	will act like the declaration for the global
	variable. The variable is defined in a fake
	file named GLOBAL and the ref from scope is
	actually a function named GLOBAL. This
	implementation should be reworked later on
	when namespace support has been implemented.
	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Pass the new
	SN_GLOBAL_NAMESPACE flag to sn_insert_xref
	when a var or func ref is found in the global
	scope. Trim the { and } chars off the var
	name for a var like ${foo}. Don't emit a
	variable declaration when a global variable
	is written. Reset current_function to ""
	instead of "GLOBAL".
	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Include the $
	in the variable name for variables in
	double quoted strings and heredoc strings.
	Pass new SN_GLOBAL_NAMESPACE flag to